--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</header>
 		
 		<div id="slider">
-			<input type="range" id="myrange" max="4" min="0" value="2" onchange="changed()">
+			<input type="range" id="myrange" max="4" min="0" value="2" onchange="changed()" aria-label="set-viewers-and-price">
 		</div>
 		
 		<div id="price">
