--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   </section>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/firkan">Furkan Doğan</a>.
+    Challenge by <a href="https://www.frontendmentor.io/profile/firkan" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/firkan">Furkan Doğan</a>.
   </div>
   
   <script src="script.js"></script>
